# lex-llm

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  fix_pyproject_license.py  generate_openapi.py  main.py  makefile  mypy.ini  pyproject.toml  search_synthesis_smoketest.html  smoketest.html
.github/ISSUE_TEMPLATE/: story-template.md
.github/workflows/: deploy-staging.yml  lint.yml  tests.yml
openapi/: lex-db.yaml  openapi.yaml
scripts/: automatic-deploy-preproduction.sh  automatic-deploy-staging.sh  build-latest.sh  build-staging.sh  deploy-preproduction.sh  deploy-staging.sh
src/examples/: lex_db_search_example.py  smolagents_example.py
src/lex_llm/: __init__.py  orchestrator.py  prompts.py  prompts_search_synthesis.py
src/lex_llm/api/: event_emitter.py  event_models.py  orchestrator.py  routes.py  vllm_health_monitor.py  workflow_utils.py
src/lex_llm/tools/: __init__.py  citation_extraction.py  expand_query.py  extract_used_sources_via_llm.py  generate_answer_body.py  generate_deferral.py  generate_definitions.py  generate_lead_and_body.py  generate_lead_and_body_v2.py  generate_lead_and_body_v3.py  generate_lead_paragraph.py  generate_response_with_sources.py  generate_response_with_sources_v2.py  generate_response_with_sources_v3.py  generate_source_list.py  generate_source_list_v2.py  generate_source_list_v3.py  hybrid_search.py  interpret_and_route.py  llm_json.py  response_generation.py  retrieval_cascade.py  retrieval_cascade_fast.py  search_and_validate.py  search_knowledge_base.py  search_with_expansion.py  simple_search.py  source_formatting.py
src/lex_llm/utils/: descriptions.py  retrieval_helpers.py  rrf.py
src/lex_llm/workflows/: alpha_workflow_v1.py  alpha_workflow_v1_gemma.py  beta_workflow_v1 scaleway.py  beta_workflow_v1.py  beta_workflow_v1_large.py  beta_workflow_v1_scaleway.py  beta_workflow_v2_hybrid.py  beta_workflow_v2_hybrid_hyde.py  beta_workflow_v2_hyde.py  beta_workflow_v3.py  beta_workflow_v4.py  beta_workflow_v4_fast.py  (+27 more)
src/scripts/: lex_db_search_example.py
src/tests/: test_client_imports.py  test_dummy.py  test_observability.py  test_orchestrator.py
(+11 files in other folders)
